Gtk+-3.20: fix jumping button in mate-font-viewer toolbar

--- a/desktop-themes/Blue-Submarine/gtk-3.0/gtk-widgets.css
+++ b/desktop-themes/Blue-Submarine/gtk-3.0/gtk-widgets.css
@@ -2776,9 +2776,11 @@ toolbar separator:disabled {
     primary toolbar raised buttons
 *************************************/
 
-/* ie. cimnnamon-settings (button.raised) */
+/* ie. cimnnamon-settings (button.raised), mate-font-viewer toolbar info button */
 toolbar .raised button,
-toolbar button.raised {
+toolbar button.raised,
+toolbar button.raised:hover,
+toolbar button.raised:focus {
     padding: 6px;
 }
 
